# mips32-npc

./: .gitignore  Makefile  Makefile.check  Makefile.in  README.md  config.status  configure.ac  prefix.mk.in
doc/: project.md
emulator/common/: AsyncReadMem.sv  Device.v  Makefile.include  common.cpp  common.h  crosscheck.py  device.cpp  emulator.cpp  monitor.cpp
emulator/mips32_npc/: Makefile
emulator/mips32_npc/obj_dir/: VTop.cpp  VTop.h  VTop.mk  VTop__ALLcls.d  VTop__ALLsup.d  VTop__Dpi.h  VTop__Slow.cpp  VTop__Syms.cpp  VTop__Syms.h  VTop___024unit.cpp  VTop___024unit.h  VTop___024unit__Slow.cpp  VTop__ver.d  VTop_classes.mk  common.d  device.d  emulator.d  monitor.d
emulator/rv32_noop/: Makefile
project/: build.scala.in
src/common/: axi.scala  bridges.scala  configurations.scala  consts.scala  csr.scala  debug.scala  debug_lite.scala  instructions.scala  memory.scala  memory_mapping.txt
src/mips32_npc/: alu.scala  bru.scala  consts.scala  core.scala  idu.scala  ifu.scala  isu.scala  lsu.scala  msg.scala  package.scala  regfile.scala  tile.scala  top.scala  wbu.scala
src/rv32_1stage/: core.scala  cpath.scala  dpath.scala  tile.scala
src/rv32_noop/: alu.scala  bru.scala  consts.scala  core.scala  csr.scala  idu.scala  ifu.scala  isu.scala  lsu.scala  msg.scala  regfile.scala  top.scala  wbu.scala
